# End-to-End-Smart-Power

./: .gitignore  README.md  measure_metrics.py  note.ipynb  pyproject.toml  requirements.txt  streamlit.toml
app/: api.py  streamlit_app.py
src/: __init__.py  config.py  pipeline.py  train.py
src/power_forecast/: __init__.py  train.py
tests/: test_pipeline.py
