[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "smart-power-forecast"
version = "0.1.0"
description = "End-to-end household power forecasting with Streamlit and FastAPI"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "scikit-learn>=1.4.0",
    "matplotlib>=3.8.0",
    "joblib>=1.3.0",
    "streamlit>=1.35.0",
    "fastapi>=0.111.0",
    "uvicorn>=0.30.0",
    "plotly>=5.22.0",
    "httpx>=0.27.0",
    "ucimlrepo>=0.0.7",
    "ipykernel>=7.2.0",
    "xgboost>=2.1.0"
]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[project.optional-dependencies]
dev = ["pytest>=8.2.0"]
